Fix hidden blocks for Chrome & tighten up gaps
On Chrome, `visibility: collapse` hides the element but doesn't actually
collapse the space. Wat.

--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,7 @@ body {
 #envelope-wrapper {
   width: 90vw;
   height: 39.079vw;
-  margin: 4rem auto;
+  margin: 2rem auto;
 }
 
 #envelope {
@@ -131,6 +131,7 @@ body {
 
 header, section {
   padding: 2rem;
+  padding-bottom: 0;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -166,10 +167,10 @@ button:active {
 
 /* These will be flipped if javascript is disabled. */
 .noscript {
-  visibility: collapse;
+  display: none;
 }
 .script {
-  visibility: visible;
+  display: flex;
 }
 
 p {
